# dialect-mcps

./: .gitignore  README.md  main.py  pyproject.toml
drift/perps/: README.md  main.py  pyproject.toml
drift/perps-close/: README.md  main.py  pyproject.toml
drift/perps-open/: README.md  main.py  pyproject.toml
drift/vaults/: README.md  main.py  pyproject.toml
drift/vaults-deposit/: .env.example  README.md  main.py  pyproject.toml
drift/vaults-withdraw/: README.md  main.py  pyproject.toml
jupiter/dao/: README.md  main.py  pyproject.toml
jupiter/dao-claim/: README.md  main.py  pyproject.toml
jupiter/dao-stake/: README.md  main.py  pyproject.toml
jupiter/dao-unstake/: README.md  main.py  pyproject.toml
jupiter/perps/: README.md  main.py  pyproject.toml
jupiter/perps-add-collateral/: README.md  main.py  pyproject.toml
jupiter/perps-close/: main.py  pyproject.toml
jupiter/perps-open/: README.md  main.py  pyproject.toml
jupiter/perps-remove-collateral/: main.py  pyproject.toml
jupiter/perps-stop-loss/: README.md  main.py  pyproject.toml
jupiter/perps-take-profit/: README.md  main.py  pyproject.toml
jupiter/swap/: .env.example  README.md  main.py  pyproject.toml
kamino/deposit/: README.md  main.py  pyproject.toml
kamino/withdraw/: README.md  main.py  pyproject.toml
lulo/deposit/: README.md  main.py  pyproject.toml
lulo/withdraw/: README.md  main.py  pyproject.toml
marginfi/supply/: README.md  main.py  pyproject.toml
marginfi/withdraw/: README.md  main.py  pyproject.toml
meteora/add-liquidity/: README.md  main.py  pyproject.toml
(+32 files in other folders)
